refs #5977 make sure the site selector is always visible

--- a/plugins/Morpheus/stylesheets/uibase/_siteSelect.less
+++ b/plugins/Morpheus/stylesheets/uibase/_siteSelect.less
@@ -31,6 +31,12 @@
   font-weight: bold;
 }
 
+.top_bar_sites_selector {
+  .sites_autocomplete .custom_select {
+    z-index: 139;
+  }
+}
+
 .sites_autocomplete .custom_select {
   float: left;
   position: relative;
